srcpkgs/wrench/template
maintainer="nox"
pkgname="wrench"
version=0.0.0
revision=1
_gitrev="730a14e0c990bb39a28e2f29318166c91e22fd4b"
short_desc="Small tool for deterministic generation of secrets"
makedepends="nettle-devel"
hostmakedepends+=" clang"
hostmakedepends+=" pkg-config"
homepage="https://github.com/Reisen/keygen"
license="Custom"
distfiles="https://github.com/Reisen/keygen/archive/$_gitrev.tar.gz>$pkgname-$version.tar.gz"
checksum="1a0e7689ef03efb5f1821861b86d4dd28ce49f3a3478ba37fd6c85099d7dc249"
wrksrc="$pkgname-$_gitrev"
build_style="cargo"

broken='src/main.rs:71:43 error[E0277]: no implementation for `u8 & i32`'
read -d '' _broken <<'EOF'
Compiling nettle v5.0.3
Compiling lalrpop v0.17.2
Compiling sequoia-openpgp v0.14.0
Compiling wrench v0.1.0
error[E0277]: no implementation for `u8 & i32`
  --> src/main.rs:71:43
   |
71 |    eprint!("{} ", emoji[((byte >> 4) & 0xF) as usize]);
   |                                      ^ no implementation for `u8 & i32`
   = help: the trait `std::ops::BitAnd<i32>` is not implemented for `u8`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
error: could not compile `wrench`.

To learn more, run the command again with --verbose.
EOF

do_install() {
  vbin "target/$RUST_TARGET/release/wrench"
}

# vim: set filetype=sh foldmethod=marker foldlevel=0 nowrap:
